# setting_up_cpp_tools

./: .gitignore  CMakeLists.txt  README.md  helpers.hpp  main.cpp  soundex.hpp
tests/: CMakeLists.txt  simple_tests.cpp
